1. Worked on Feature #32 2. When user logs in, the header's sign in and sign up button's were still visisble till the site was refreshed.

--- a/apps/front/src/app/homepage/homepage.component.html
+++ b/apps/front/src/app/homepage/homepage.component.html
@@ -9,13 +9,30 @@
     <h2>Your sets</h2>
   </div>
   <div class="row row-cols-1 row-cols-md-4 g-4 py-4 px-3 w-100">
-    <div *ngIf="sets && sets.length === 0" class="text-secondary">You haven't created any sets yet. <a [routerLink]="['/create/set']">Create your first one.</a></div>
-    <a *ngFor="let set of sets;" [routerLink]="['/study-set', set.id]" class="text-decoration-none">
-     <div class="col">
+    <div *ngIf="sets && sets.length === 0" class="text-secondary">
+      You haven't created any sets yet.
+      <a [routerLink]="['/create/set']">Create your first one.</a>
+    </div>
+    <a
+      *ngFor="let set of sets"
+      [routerLink]="['/study-set', set.id]"
+      class="text-decoration-none"
+    >
+      <div class="col">
         <div class="card shadow set-card" role="button">
           <div class="card-body">
-            <h5 class="card-title">{{set.title}} <fa-icon *ngIf="set.private" [icon]="['far', 'eye-slash']"></fa-icon></h5>
-            <h6 class="card-subtitle text-muted">{{set.cards.length}} term{{this.set.cards.length > 1 ? 's' : ''}}</h6>
+            <h5 class="card-title">
+              {{ set.title }}
+              <fa-icon
+                *ngIf="set.private"
+                [icon]="['far', 'eye-slash']"
+              ></fa-icon>
+            </h5>
+            <h6 class="card-subtitle text-muted">
+              {{ set.cards.length }} term{{
+                this.set.cards.length > 1 ? 's' : ''
+              }}
+            </h6>
           </div>
         </div>
       </div>
