Add question mark buttons to pages that have help articles

--- a/apps/front/src/app/create/study-set/create-study-set.component.html
+++ b/apps/front/src/app/create/study-set/create-study-set.component.html
@@ -1,7 +1,10 @@
 <fieldset [disabled]="formDisabled">
   <div class="py-4">
     <div class="create-header d-flex justify-content-between text-nowrap">
-      <h2>Create a new study set</h2>
+      <h2>
+        Create a new study set
+        <a href="/handbook/usage/creating-sets#creating-manually" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
+      </h2>
       <button type="submit" class="btn btn-primary" (click)="createSet()">Create</button>
     </div>
     <div class="container-fluid mt-3">
