--- a/apps/front/src/app/header/anki-import-modal/anki-import-modal.component.html
+++ b/apps/front/src/app/header/anki-import-modal/anki-import-modal.component.html
@@ -8,7 +8,10 @@
     <div class="col">
       <div class="row text-center justify-content-center">
         <img src="assets/header/anki.jpeg" class="mb-2 anki-import-logo">
-        <div class="fs-3 mb-2">Import a study set from Anki</div>
+        <div class="fs-3 mb-2">
+          Import a study set from Anki
+          <a href="/handbook/usage/creating-sets#importing-from-anki" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
+        </div>
         <div class="fs-6 text-secondary">If you've created a set in Anki, you can import it to Scholarsome. Click <a href="https://docs.ankiweb.net/exporting.html#deck-apkg" target="_blank">here</a> to view how to export your sets as a .apkg file.<br><br>Note that, at the moment, only notes with a traditional front and back are supported. Multiple fields will be supported in a future release.</div>
       </div>
     </div>
