--- a/apps/front/src/app/header/quizlet-import-modal/quizlet-import-modal.component.html
+++ b/apps/front/src/app/header/quizlet-import-modal/quizlet-import-modal.component.html
@@ -8,7 +8,10 @@
     <div class="col">
       <div class="row text-center">
         <fa-icon [icon]="faQ" class="quizlet-import-logo quizlet-color"></fa-icon>
-        <div class="fs-3 mb-2">Import a study set from Quizlet</div>
+        <div class="fs-3 mb-2">
+          Import a study set from Quizlet
+          <a href="/handbook/usage/creating-sets#importing-from-quizlet" target="_blank" class="text-decoration-none help-button"><fa-icon [icon]="faQuestionCircle" class="fs-5"></fa-icon></a>
+        </div>
         <div class="fs-6 text-secondary">If you've created a Quizlet set, you can import it to Scholarsome. Click <a href="https://help.quizlet.com/hc/en-us/articles/360034345672-Exporting-your-sets" target="_blank">here</a> to view how to export your sets.<br><br>Use the tab and semicolon options. Paste the set in the box below, and click import.</div>
       </div>
     </div>
