Fix 404 on reload issue

--- a/apps/front/src/app/header/header.component.html
+++ b/apps/front/src/app/header/header.component.html
@@ -40,7 +40,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link text-black" aria-current="page" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" href="/handbook">Handbook</a>
+          <a class="nav-link text-black" aria-current="page" href="/handbook">Handbook</a>
         </li>
         <li class="btn-group" dropdown>
           <button
