--- a/apps/front/src/app/header/resend-email/resend-email.component.html
+++ b/apps/front/src/app/header/resend-email/resend-email.component.html
@@ -3,7 +3,7 @@
   role="alert"
 >
   <div class="mx-2">
-    {{result.message==='' ? "Please verify your account by clicking on the link in the verification email." : "A verification Email has been sent to you email id."}}
+    {{result.message==='' ? "Please verify your account by clicking on the link in the verification email." : "The verification email has been resent."}}
   </div>
   <button class="btn btn-sm btn-warning mx-2" (click)="onClick()" [disabled]="clicked" *ngIf="result.message===''">
     <span *ngIf="clicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
