Add upload and view avatar routes, add homepage image, fix card authentication

--- a/apps/front/src/app/header/anki-import-modal/anki-import-modal.component.html
+++ b/apps/front/src/app/header/anki-import-modal/anki-import-modal.component.html
@@ -34,7 +34,9 @@
       <div class="modal-footer">
         <span *ngIf="uploading" class="text-secondary">Uploading media, this may take a minute...</span>
         <button type="submit" class="btn btn-primary" [disabled]="clicked">
-          <span *ngIf="clicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>Import</button>
+          <span *ngIf="clicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Import
+        </button>
       </div>
     </form>
   </div>
