--- a/apps/front/src/app/header/profile-picture-modal/profile-picture-modal.component.html
+++ b/apps/front/src/app/header/profile-picture-modal/profile-picture-modal.component.html
@@ -1,11 +1,23 @@
 <ng-template #modal>
   <div class="modal-header bg-white">
-    <h4 class="modal-title pull-left">Change profile picture</h4>
+    <h4 class="modal-title pull-left">Change avatar</h4>
     <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="modalRef?.hide()">
       <span aria-hidden="true" class="visually-hidden">&times;</span>
     </button>
   </div>
   <div class="modal-body">
-
+    <form (ngSubmit)="submit(form)" #form="ngForm" ngNativeValidate>
+      <div class="mb-3">
+        <input type="file" accept="image/png,image/jpeg" class="form-control" name="file" (change)="onFileUpload($event)" [disabled]="clicked" ngModel required>
+        <div *ngIf="!existingAvatar" class="form-text">You currently do not have an avatar.</div>
+        <div *ngIf="existingAvatar" class="form-text">Changing your avatar will replace your existing one.</div>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary" [disabled]="clicked">
+          <span *ngIf="clicked" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+          Submit
+        </button>
+      </div>
+    </form>
   </div>
 </ng-template>
