Add avatar to profile and header

--- a/apps/front/src/app/header/header.component.scss
+++ b/apps/front/src/app/header/header.component.scss
@@ -38,6 +38,7 @@ a:hover {
 .avatar {
   border-radius: 50px;
   cursor: pointer;
+  width: 40%;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
