--- a/apps/front/src/app/header/header.component.html
+++ b/apps/front/src/app/header/header.component.html
@@ -25,8 +25,12 @@
         </li>
       </ul>
       <div class="d-flex align-items-baseline">
-        <a *ngIf="window.location.hostname !== 'scholarsome.com' && updateAvailable" [href]="releaseUrl" target="_blank"><small class="d-inline-flex px-2 py-1 fw-semibold bg-warning text-bg-warning border border-warning-s rounded-2 text-decoration-underline me-2">New version is available</small></a>
-        <span class="navbar-text me-3 fs-6">v{{packageJson.version}}</span>
+        <a *ngIf="window.location.hostname !== 'scholarsome.com' && updateAvailable" [href]="releaseUrl" target="_blank">
+          <small class="d-inline-flex px-2 py-1 fw-semibold bg-warning text-bg-warning border border-warning-s rounded-2 text-decoration-underline">
+            New version is available
+          </small>
+        </a>
+        <span class="navbar-text ms-2 me-3 fs-6">v{{packageJson.version}}</span>
         <span class="navbar-text me-2"><a href="https://github.com/hwgilbert16/scholarsome" target="_blank" class="github"><fa-icon [icon]="faGithub"></fa-icon></a></span>
         <div *ngIf="!signedIn">
           <button type="button" class="btn btn-outline-primary pr-6" (click)="this.modalRef = loginModal.open()">
@@ -39,13 +43,16 @@
         <ul class="nav navbar-nav" *ngIf="signedIn">
           <li class="nav-item dropdown">
             <a *ngIf="!avatarUrl" class="nav-link dropdown-toggle text-black text-left" data-bs-toggle="dropdown"><fa-icon [icon]="faUser"></fa-icon></a>
-            <img *ngIf="avatarUrl" [src]="avatarUrl" class="avatar" data-bs-toggle="dropdown">
-            <div class="dropdown-menu dropdown-menu-end">
+            <a *ngIf="avatarUrl" class="navbar-brand dropdown-toggle" data-bs-toggle="dropdown">
+              <img *ngIf="avatarUrl" [src]="avatarUrl" class="avatar">
+            </a>
+            <div class="dropdown-menu">
               <a *ngIf="user" class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" [routerLink]="'profile/' + user.id"><fa-icon [icon]="faUser"></fa-icon> Profile</a>
               <a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="this.profilePictureModal.open()"><fa-icon [icon]="faImage"></fa-icon> Avatar</a>
               <a class="dropdown-item" [attr.data-bs-toggle]="isMobile ? 'collapse' : ''" [attr.data-bs-target]="isMobile ? '#navbarSupportedContent' : ''" (click)="submitLogout()"><fa-icon [icon]="faArrowRightFromBracket"></fa-icon> Logout</a>
             </div>
           </li>
+          <div style="margin-right: -5rem;"></div>
         </ul>
       </div>
     </div>
