--- a/apps/front/src/app/profile/profile.component.html
+++ b/apps/front/src/app/profile/profile.component.html
@@ -7,7 +7,8 @@
 <div class="h-100 container-fluid profile-container" *ngIf="user">
   <div class="d-flex justify-content-between align-items-center h-100">
     <div class="d-flex">
-      <fa-icon [icon]="['far', 'user']" class="display-2"></fa-icon>
+      <fa-icon *ngIf="!avatarUrl" [icon]="['far', 'user']" class="display-2"></fa-icon>
+      <img *ngIf="avatarUrl" [src]="avatarUrl" class="avatar">
       <div class="display-2 mb-2 ms-3">{{user.username}}</div>
     </div>
     <div class="mt-2">
