--- a/apps/front/src/app/profile/profile.component.html
+++ b/apps/front/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 
-<div class="h-100 container-fluid profile-container" *ngIf="user">
+<div class="h-100 container-fluid profile-container mt-4" *ngIf="user">
   <div class="d-flex justify-content-between align-items-center h-100">
     <div class="d-flex">
       <fa-icon *ngIf="!avatarUrl" [icon]="['far', 'user']" class="display-2"></fa-icon>
