--- a/apps/front/src/app/header/forgot-password-modal/forgot-password-modal.component.html
+++ b/apps/front/src/app/header/forgot-password-modal/forgot-password-modal.component.html
@@ -10,8 +10,10 @@
       <div class="form-text mb-3">Enter your email address to send a password reset</div>
       <div class="mb-3">
         <label for="forgot-email" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="forgot-email" name="email" ngModel required>
-        <div *ngIf="clicked" class="form-text text-success">If that email exists, we've sent a reset message.</div>
+        <input [disabled]="clicked" type="email" class="form-control" id="forgot-email" name="email" ngModel required>
+        <div *ngIf="response === ApiResponseOptions.Success" class="form-text text-success">If that email exists, we've sent a reset message.</div>
+        <div *ngIf="response === ApiResponseOptions.Fail" class="form-text text-success">Something went wrong.</div>
+        <div *ngIf="response === ApiResponseOptions.Ratelimit" class="form-text text-success">You are being rate limited.</div>
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-primary" [disabled]="clicked">Send password reset</button>
