Add cardsPerSession database field, add Leitner learning initial study set UI

--- a/apps/front/src/app/header/header.component.html
+++ b/apps/front/src/app/header/header.component.html
@@ -51,7 +51,7 @@
             class="btn btn-primary dropdown-toggle fs-5 h-100 w-25"
             aria-controls="dropdown-basic"
           >
-            Create <span class="badge bg-white text-primary">New</span>
+            Create
             <span class="caret"></span>
           </button>
           <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu">
@@ -106,8 +106,7 @@
                 "
                 ><fa-icon [icon]="faStar" class="anki-color"></fa-icon>
                 &nbsp;From Anki
-                <span class="badge bg-primary text-white">New</span></a
-              >
+                </a>
             </li>
           </ul>
         </li>
