--- a/apps/front/src/app/leitner-set/leitner-set-study-session/leitner-set-study-session.component.html
+++ b/apps/front/src/app/leitner-set/leitner-set-study-session/leitner-set-study-session.component.html
@@ -6,7 +6,7 @@
   </div>
 </div>
 
-<div [hidden]="!loaded">
+<div [hidden]="!loaded" *ngIf="index !== cards.length">
   <div class="container flashcard-container mb-4">
     <div class="row">
       <div class="flashcard card text-center shadow-sm" [ngClass]="{'flip-back': flipped && flipInteraction, 'flip-forwards': !flipped && flipInteraction}">
@@ -20,13 +20,32 @@
       <div class="card text-center shadow-sm">
         <div class="card-body">
           <div class="mt-2 row row-cols-3 justify-content-between">
-            <button type="button" class="fs-4 w-25 btn btn-outline-warning mb-3 fw-bold ms-4" (click)="nextCard(-1)">Don't know</button>
-            <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3 fw-bold" (click)="nextCard(0)">Not sure</button>
-            <button type="button" class="fs-4 w-25 btn btn-outline-success mb-3 fw-bold me-4" (click)="nextCard(1)">Know</button>
+            <button type="button" class="fs-4 w-25 btn btn-outline-warning mb-3 fw-bold ms-4 shadow-sm" (click)="nextCard(-1)">Don't know</button>
+            <button type="button" class="fs-4 w-25 btn btn-outline-secondary mb-3 fw-bold shadow-sm" (click)="nextCard(0)">Not sure</button>
+            <button type="button" class="fs-4 w-25 btn btn-outline-success mb-3 fw-bold me-4 shadow-sm" (click)="nextCard(1)">Know</button>
           </div>
           <div class="mx-2 d-flex justify-content-between">
             <p class="text-secondary">Your progress will be saved.</p>
-            <p class="text-secondary fs-5">{{remainingCards}}</p>
+            <p class="text-secondary fs-5">{{learntCards}}/{{initialLearntCards + cards.length}}</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="d-flex flex-column justify-content-center align-items-center mx-4 message" *ngIf="loaded && index === cards.length">
+  <div class="card">
+    <div class="card-body">
+      <div class="container-fluid justify-content-around">
+        <div class="row">
+          <div class="col d-flex align-items-center justify-content-center">
+            <fa-icon [icon]="faCake" class="display-1"></fa-icon>
+          </div>
+          <div class="col">
+            <h1 class="me-4">Great job!</h1>
+            <p>You completed today's study session. Come back tomorrow to see what is on the agenda to study.</p>
+            <button class="btn btn-primary" [routerLink]="'study-set/' + setId">Back to flashcards page</button>
           </div>
         </div>
       </div>
